testdata/baselines/reference/submodule/conformance/tsxSpreadAttributesResolution12.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Boolean'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'Number'.
error TS2318: Cannot find global type 'Object'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
file.tsx(1,24): error TS2307: Cannot find module 'react' or its corresponding type declarations.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Boolean'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'Number'.
!!! error TS2318: Cannot find global type 'Object'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
==== file.tsx (1 errors) ====
    import React = require('react');
                           ~~~~~~~
!!! error TS2307: Cannot find module 'react' or its corresponding type declarations.
    
    const obj = {};
    const obj1: {x: 2} = {
        x: 2
    }
    const obj3: {y: false, overwrite: string} = {
        y: false,
        overwrite: "hi"
    }
    
    interface Prop {
        x: 2
        y: false
        overwrite: string
    }
    
    class OverWriteAttr extends React.Component<Prop, {}> {
        render() {
            return <div>Hello</div>;
        }
    }
    
    let anyobj: any;
    
    // Error
    let x = <OverWriteAttr {...obj} y overwrite="hi" {...obj1} />
    let x1 = <OverWriteAttr overwrite="hi" {...obj1} x={3} {...{y: true}} />
    let x2 = <OverWriteAttr {...anyobj} x={3} />
    let x3 = <OverWriteAttr overwrite="hi" {...obj1} {...{y: true}} />
    
    